--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -13,6 +13,12 @@ $c-close: #F62D37
 $c-minimize: #FDB425
 $c-maximize: #2AC632
 
+$c-design: #E60073
+$c-frontend: $c-primary//#4C79FF
+$c-cms: #00AACC
+$c-branding: #FF5500
+$c-text: $c-secondary//#FFA34C
+
 // case backgrounds
 $c-brown-pastel: #F3ECE2
 $bg-brown-pastel: linear-gradient(scale-color($c-brown-pastel, $lightness: 40%), $c-brown-pastel)
