--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -15,7 +15,7 @@
           <p class="project__description text-small">{{ project.description }}</p>
         </li>
       </ul>
-      <p class="cell medium-9 large-8 text-center text-medium">Besides the “live” projects above there is a couple of other concept and design stuff I did in the past. Here you can see some visual impressions:</p>
+      <p class="cell medium-9 large-8 text-center text-medium">Besides the “live” projects above there is a couple of other concept and design stuff I did in the past. Here you can see some visual impressions from the past:</p>
     </div>
   </div>
 </section>
