--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -25,12 +25,13 @@ title: Björn Richter – Product Designer and Frontend Developer
 </section>
 <%= partial "partials/projects" %>
 <div id="work">
+  <%= partial 'partials/cases/kaia' %>
   <%= partial 'partials/cases/alchemy' %>
   <%= partial 'partials/cases/senshemp' %>
   <%= partial 'partials/cases/freud' %>
   <%= partial 'partials/cases/majestic' %>
   <%= partial 'partials/cases/typo' %>
-  <%= partial 'partials/cases/beyond' %>
+  <%#= partial 'partials/cases/beyond' %>
   <%= partial 'partials/cases/insufflator' %>
   <%#= partial 'partials/cases/lemke' %>
 </div>
