Add smarthome case and updateintro text and vita

--- a/source/partials/_vita.html.erb
+++ b/source/partials/_vita.html.erb
@@ -6,8 +6,14 @@
           <h2>Work</h2>
           <li>
             <hr>
-            <p class="timespan"><small>04/2015 – Today</small></p>
-            <h5 class="text-primary">Product Designer, Frontend Developer</h5>
+            <p class="timespan"><small>06/2018 – Today</small></p>
+            <h5 class="text-primary">Senior Designer & Frontend Developer</h5>
+            <p class="text-small">Concept, UX, UI, frontend development<br /><strong><%= link_to '@ solarisBank AG, Berlin', 'http://solarisbank.com', target: 'blank', class: "text-grey external" %></strong></p>
+          </li>
+          <li>
+            <hr>
+            <p class="timespan"><small>04/2015 – 05/2018</small></p>
+            <h5 class="text-primary">Designer & Frontend Developer</h5>
             <p class="text-small">Concept, UX, UI, frontend development, CMS templating<br /><strong><%= link_to '@ bitspire, Berlin', 'http://bitspire.de', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
           <li>
