--- a/source/partials/cases/_kaia.html.erb
+++ b/source/partials/cases/_kaia.html.erb
@@ -1,4 +1,4 @@
-<section class="bg-purple-pastel">
+<section class="bg-brown-pastel">
   <div class="grid-container">
     <div class="grid-x grid-padding-x grid-margin-y align-center text-center case-title">
       <div class="cell medium-10">
