--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,18 +13,19 @@ title: Björn Richter – Product Designer and Frontend Developer
     </div>
     <div class="cell medium-8 large-6">
       <p>
-        Currently I'm working at <%= link_to 'bitspire', 'http://bitspire.de', target: 'blank', class: "external" %> in Berlin. As a designer and frontend developer I do conceptual work, user interface design, frontend engineering and templating with the open source rails based AlchemyCMS. <br />
+        Currently I'm working at <%= link_to 'solarisBank AG', 'http://solarisbank.com' %> in Berlin, bridging UX and tech. As a designer and developer I do conceptual work, user interface design and frontend engineering.<br />
         I have a bachelor degree in interface design from the <%= link_to 'University of Applied Sciences Potsdam', 'https://fh-potsdam.de', target: 'blank', class: "external" %>.<br />
-        In the past I gained experience at <%= link_to 'Edenspiekermann', 'http://edenspiekermann.de', target: 'blank', class: "external" %> and several other companies. See a brief <%= link_to 'summary', '#vita', class: "scroll-link" %> at the bottom.
+        In the past I gained experience in a lot of short and long running projects for bigger and smaller clients at <%= link_to 'bitspire', 'http://bitspire.de', target: 'blank', class: "external" %>, <%= link_to 'Edenspiekermann', 'http://edenspiekermann.de', target: 'blank', class: "external" %> and several other companies. See a brief <%= link_to 'summary', '#vita', class: "scroll-link" %> at the bottom.
       </p>
       <p>
-        In the recent years I am/was involved in several e-commerce and web projects for clients like the <strong>brand eins magazine</strong>, <strong>ZDF</strong>, <strong>Finanzenverlag</strong>, <strong>bestmade.co</strong> and some more, as a designer and/or frontend developer.
+        In the recent years I was involved in several e-commerce and web projects for clients like the <strong>brand eins magazine</strong>, <strong>ZDF</strong>, <strong>Finanzenverlag</strong>, <strong>bestmade.co</strong> and some more, as a designer and/or frontend developer.
       </p>
     </div>
   </div>
 </section>
 <%= partial "partials/projects" %>
 <div id="work">
+  <%= partial 'partials/cases/smarthome' %>
   <%= partial 'partials/cases/kaia' %>
   <%= partial 'partials/cases/alchemy' %>
   <%= partial 'partials/cases/senshemp' %>
