--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -40,6 +40,7 @@ $bg-grey-pastel: linear-gradient(scale-color($c-grey-pastel, $lightness: 40%), $
 
 $sp-small: rem-calc(10)
 $sp-base: rem-calc(20)
+$sp-medium: rem-calc(30)
 $sp-big: rem-calc(40)
 $sp-large: rem-calc(60)
 
