Adjust title text and add duration to vita entry time spans

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Björn Richter – Product Designer and Frontend Developer
+title: Björn Richter – Interface Designer and Frontend Developer
 ---
 <div class="menu-btn-stage hide-for-medium"></div>
 <div class="selfie">
@@ -9,7 +9,7 @@ title: Björn Richter – Product Designer and Frontend Developer
   <div class="grid-x grid-padding-x align-center">
     <div class="cell medium-10 large-5 text-center large-text-right">
       <h2 class="like-h3 text-grey">Hi, I'm Björn Richter,</h2>
-      <h1 class="text-primary">UX/UI Designer<br />and Frontend Developer<br />based in Berlin.</h1>
+      <h1 class="text-primary">UX/UI designer<br />and frontend developer<br />based in Berlin.</h1>
     </div>
     <div class="cell medium-8 large-6">
       <p>
