Adjust texts of header, intro and projects

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,16 +9,12 @@ title: Björn Richter – Interface Designer and Frontend Developer
   <div class="grid-x grid-padding-x align-center">
     <div class="cell medium-10 large-5 text-center large-text-right">
       <h2 class="like-h3 text-grey">Hi, I'm Björn Richter,</h2>
-      <h1 class="text-primary">UX/UI designer<br />and frontend developer<br />based in Berlin.</h1>
+      <h1 class="text-primary">Full Stack Designer and Frontend Developer based in Berlin.</h1>
     </div>
     <div class="cell medium-8 large-6">
       <p>
-        Currently I'm working at <%= link_to 'solarisBank AG', 'http://solarisbank.com' %> in Berlin, bridging UX and tech. As a designer and developer I do conceptual work, user interface design and frontend engineering.<br />
-        I have a bachelor degree in interface design from the <%= link_to 'University of Applied Sciences Potsdam', 'https://fh-potsdam.de', target: 'blank', class: "external" %>.<br />
-        In the past I gained experience in a lot of short and long running projects for bigger and smaller clients at <%= link_to 'bitspire', 'http://bitspire.de', target: 'blank', class: "external" %>, <%= link_to 'Edenspiekermann', 'http://edenspiekermann.de', target: 'blank', class: "external" %> and several other companies. See a brief <%= link_to 'summary', '#vita', class: "scroll-link" %> at the bottom.
-      </p>
-      <p>
-        In the recent years I was involved in several e-commerce and web projects for clients like the <strong>brand eins magazine</strong>, <strong>ZDF</strong>, <strong>Finanzenverlag</strong>, <strong>bestmade.co</strong> and some more, as a designer and/or frontend developer.
+        Currently I'm working at <%= link_to 'solarisBank AG', 'http://solarisbank.com', target: "blank", class: "external" %> in the <%= link_to 'Blockchain Factory', 'https://www.solarisbank.com/en/services/blockchain', target: 'blank', class: "external" %> team. As a designer and developer I'm responsible for the concept, design and implementation of the frontend for a new financial service/product.<br />
+        In the past I gained experience in a lot of short and long running projects for bigger and smaller clients at <%= link_to 'bitspire', 'http://bitspire.de', target: 'blank', class: "external" %>, <%= link_to 'Edenspiekermann', 'http://edenspiekermann.de', target: 'blank', class: "external" %> and several other companies. I have a Bachelor's degree in Interface Design from the <%= link_to 'University of Applied Sciences Potsdam', 'https://fh-potsdam.de', target: 'blank', class: "external" %>.<br />My full <%= link_to 'CV', '#cv', class: "scroll-link" %> can be found at the bottom at the bottom.
       </p>
     </div>
   </div>
@@ -37,5 +33,5 @@ title: Björn Richter – Interface Designer and Frontend Developer
   <%#= partial 'partials/cases/lemke' %>
 </div>
 <%= partial "partials/skills" %>
-<%= partial "partials/vita" %>
+<%= partial "partials/cv" %>
 <%= javascript_include_tag 'slick'  %>
