--- a/source/partials/_cv.html.erb
+++ b/source/partials/_cv.html.erb
@@ -1,4 +1,4 @@
-<section id="vita" class="vita">
+<section id="cv" class="cv">
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-center">
       <div class="cell medium-6 large-5">
@@ -6,7 +6,7 @@
           <h2>Work</h2>
           <li>
             <hr>
-            <p class="timespan"><span class="text-small text-caps">06/2018</span><span class="text-small"> – Today</span> <span class="text-xsmall text-grey dynamic-date-span" data-startdate="2018, 5, 1">(3 years)</span></p>
+            <p class="timespan"><span class="text-small text-caps">06/2018</span><span class="text-small"> – Today</span> <span class="text-xsmall text-grey dynamic-date-span" data-startdate="2018-06-01"></span></p>
             <h5 class="text-primary">Senior Designer & Frontend Developer</h5>
             <p class="text-small">Concept, UX, UI, frontend development<br /><strong><%= link_to '@ solarisBank AG, Berlin', 'http://solarisbank.com', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
