--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="grid-x align-middle">
   <% link_to "http://bjoern-richter.com", class: 'logo cell shrink' do %>
     <%= image_tag "bjoern-richter-logo.svg" %>
-    <p class="text-bold">Björn<span>|</span>Richter<br />Concept/UX/UI<span>|</span>Designer<br />Frontend<span>|</span>Developer</p>
+    <p class="text-bold">Björn<span>|</span>Richter<br />Full<span>|</span>Stack<span>|</span>Designer<br />Frontend<span>|</span>Developer</p>
   <% end %>
   <div class="menu-btn">
     <div class="menu-icon">
@@ -17,7 +17,7 @@
         <li><%= link_to "About", "#about", class: "scroll-link" %></li>
         <li><%= link_to "Work", "#projects", class: "scroll-link" %></li>
         <li><%= link_to "Skills", "#skills", class: "scroll-link" %></li>
-        <li><%= link_to "Vita", "#vita", class: "scroll-link" %></li>
+        <li><%= link_to "CV", "#cv", class: "scroll-link" %></li>
       </ul>
     </div>
   </nav>
