--- a/source/partials/_skills.html.erb
+++ b/source/partials/_skills.html.erb
@@ -25,35 +25,33 @@
     el: "#skills",
     data: {
       skills: [
-        { category: "Design", name: "Research", value: "15" },
-        { category: "Design", name: "Strategy", value: "20" },
-        { category: "Design", name: "Concept", value: "75" },
+        { category: "Design", name: "UX Conception", value: "65" },
         { category: "Design", name: "Interaction Design", value: "85" },
         { category: "Design", name: "Visual Interface Design", value: "100" },
-        { category: "Design", name: "Evaluation", value: "20" },
-        { category: "Design", name: "Corporate Design", value: "50" },
-        { category: "Design", name: "Graphic Design", value: "50" },
-        { category: "Design", name: "Typography", value: "90" },
-        { category: "Design", name: "Workshops", value: "20" },
+        { category: "Design", name: "User-Testing and Research", value: "40" },
+        { category: "Design", name: "Design Systems", value: "30" },
+        { category: "Design", name: "Corporate Design", value: "45" },
+        { category: "Design", name: "Graphic Design", value: "35" },
+        { category: "Design", name: "Typography and Layout", value: "90" },
         { category: "Development", name: "HTML", value: "80" },
         { category: "Development", name: "CSS/Sass", value: "100" },
-        { category: "Development", name: "Foundation, Bootstrap", value: "70" },
-        { category: "Development", name: "Javascript", value: "35" },
+        { category: "Development", name: "Javascript", value: "45" },
         { category: "Development", name: "jQuery", value: "50" },
-        { category: "Development", name: "git", value: "90" },
-        { category: "Development", name: "Agile, Scrum, Kanban", value: "80" },
-        { category: "Development", name: "AlchemyCMS", value: "70" },
-        { category: "Development", name: "Ruby on Rails", value: "10" },
-        { category: "Development", name: "Vue.js", value: "15" },
-        { category: "Personal", name: "Communication", value: "90" },
-        { category: "Personal", name: "Teamwork", value: "100" },
-        { category: "Personal", name: "Presentation", value: "60" },
-        { category: "Personal", name: "Moderation", value: "25" },
-        { category: "Personal", name: "Analytical thinking", value: "100" },
-        { category: "Personal", name: "Creative problem solving", value: "100" },
-        { category: "Personal", name: "Structured working", value: "85" },
-        { category: "Personal", name: "Critical ability", value: "95" },
-        { category: "Personal", name: "Reliability", value: "90" },
+        { category: "Development", name: "React", value: "25" },
+        { category: "Development", name: "Ruby on Rails", value: "8" },
+        { category: "Development", name: "git", value: "70" },
+        { category: "Development", name: "AlchemyCMS", value: "55" },
+        { category: "Development", name: "Agile, Scrum, Kanban", value: "75" },
+        { category: "Others", name: "Communication", value: "80" },
+        { category: "Others", name: "Presentation", value: "60" },
+        { category: "Others", name: "Meeting facilitation", value: "30" },
+        { category: "Others", name: "Teamwork", value: "100" },
+        { category: "Others", name: "Analytical thinking", value: "100" },
+        { category: "Others", name: "Creative problem solving", value: "85" },
+        { category: "Others", name: "Structured working", value: "95" },
+        { category: "Others", name: "Reliability", value: "90" },
+        { category: "Others", name: "Self reflection", value: "75" },
+        { category: "Others", name: "Passion", value: "100" },
       ],
       active: "Design"
     },
