Adjust skills order and CV texts

--- a/source/partials/_cv.html.erb
+++ b/source/partials/_cv.html.erb
@@ -8,25 +8,25 @@
             <hr>
             <p class="timespan"><span class="text-small text-caps">06/2018</span><span class="text-small"> – Today</span> <span class="text-xsmall text-grey dynamic-date-span" data-startdate="2018-06-01"></span></p>
             <h5 class="text-primary">Senior Designer & Frontend Developer</h5>
-            <p class="text-small">Concept, UX, UI, frontend development<br /><strong><%= link_to '@ solarisBank AG, Berlin', 'http://solarisbank.com', target: 'blank', class: "text-grey external" %></strong></p>
+            <p class="text-small">Design and development of financial products<br /><strong><%= link_to '@ solarisBank AG, Berlin', 'http://solarisbank.com', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
           <li>
             <hr>
             <p class="timespan"><span class="text-small text-caps">04/2015 – 05/2018</span> <span class="text-xsmall text-grey">(3 years)</span></p>
             <h5 class="text-primary">Designer & Frontend Developer</h5>
-            <p class="text-small">Concept, UX, UI, frontend development, CMS templating<br /><strong><%= link_to '@ bitspire, Berlin', 'http://bitspire.de', target: 'blank', class: "text-grey external" %></strong></p>
+            <p class="text-small">Design and development of e-commerce products and corporate websites<br /><strong><%= link_to '@ bitspire, Berlin', 'http://bitspire.de', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
           <li>
             <hr>
             <p class="timespan"><span class="text-small text-caps">04/2014 – 09/2014</span> <span class="text-xsmall text-grey">(6 months)</span></p>
             <h5 class="text-primary">Design Intern</h5>
-            <p class="text-small">Concept, UX, UI, frontend development<br /><strong><%= link_to '@ Edenspiekermann AG, Berlin', 'http://www.edenspiekermann.com', target: 'blank', class: "text-grey external" %></strong></p>
+            <p class="text-small">Design and development of corporate products and websites<br /><strong><%= link_to '@ Edenspiekermann AG, Berlin', 'http://www.edenspiekermann.com', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
           <li>
             <hr>
             <p class="timespan"><span class="text-small text-caps">07/2010 – 03/2014</span> <span class="text-xsmall text-grey">(4 years)</span></p>
             <h5 class="text-primary">Interface Designer (part-time)</h5>
-            <p class="text-small">Interface design for medical devices, webdesign, communication design<br /><strong class="text-grey">@ World of Medicine GmbH, Berlin</strong></p>
+            <p class="text-small">Interface design for medical devices, web design, communication design<br /><strong class="text-grey">@ World of Medicine GmbH, Berlin</strong></p>
           </li>
           <li>
             <hr>
@@ -38,7 +38,7 @@
             <hr>
             <p class="timespan"><span class="text-small text-caps">07/2007 – 10/2007</span> <span class="text-xsmall text-grey">(4 months)</span></p>
             <h5 class="text-primary">Media Designer/Operator</h5>
-            <p class="text-small">Print design, print production<br /><strong class="text-grey">@ Nordbahn gGmbH – Printery</strong></p>
+            <p class="text-small">Design and print prepress of corporate media<br /><strong class="text-grey">@ Nordbahn gGmbH – Printery</strong></p>
           </li>
         </ul>
         <br />
