--- a/source/stylesheets/elements/_skills.sass
+++ b/source/stylesheets/elements/_skills.sass
@@ -12,6 +12,7 @@
     min-width: 8rem
     margin-right: 1em
     line-height: $lh-small
+    font-size: $fs-small
 
   .skill__progress-bar
     width: 60%
@@ -75,4 +76,3 @@
     background: linear-gradient(to right, rgba(255,255,255,0), $c-grey-xlight, rgba(255,255,255,0))
     margin-top: 0
     margin-bottom: $sp-big
-
