--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,7 +13,7 @@ title: Björn Richter – Interface Designer and Frontend Developer
     </div>
     <div class="cell medium-8 large-6">
       <p>
-        Currently I'm working at <%= link_to 'solarisBank AG', 'http://solarisbank.com', target: "blank", class: "external" %> in the <%= link_to 'Blockchain Factory', 'https://www.solarisbank.com/en/services/blockchain', target: 'blank', class: "external" %> team. As a designer and developer I'm responsible for the concept, design and implementation of the frontend for a new financial service/product.<br />
+        Currently I'm working at <%= link_to 'solarisBank', 'http://solarisbank.com', target: "blank", class: "external" %> in the <%= link_to 'Blockchain Factory', 'https://www.solarisbank.com/en/services/blockchain', target: 'blank', class: "external" %> team. As a designer and frontend developer I'm working on the concept, design and implementation of user interfaces for new financial services, especially in the field of crypto currencies.<br />
         In the past I gained experience in a lot of short and long running projects for bigger and smaller clients at <%= link_to 'bitspire', 'http://bitspire.de', target: 'blank', class: "external" %>, <%= link_to 'Edenspiekermann', 'http://edenspiekermann.de', target: 'blank', class: "external" %> and several other companies. I have a Bachelor's degree in Interface Design from the <%= link_to 'University of Applied Sciences Potsdam', 'https://fh-potsdam.de', target: 'blank', class: "external" %>.<br />My full <%= link_to 'CV', '#cv', class: "scroll-link" %> can be found at the bottom at the bottom.
       </p>
     </div>
