--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,7 +1,7 @@
 <section id="projects" class="p-top-0">
   <div class="grid-container" v-on:click="resetFilter">
     <div class="grid-x grid-padding-x align-center">
-      <h2 class="cell medium-10 large-6 text-center">Projects I mainly worked on during the last three to four years</h2>
+      <h2 class="cell medium-10 large-6 text-center">Some of the projects I've worked on during the last years</h2>
       <ul class="projects cell medium-10 large-7">
         <li class="project" v-for="project in projects" v-bind:class="{ 'muted': !project.active }">
           <h4 class="project__title">
@@ -12,7 +12,7 @@
               </template>
             </span>
           </h4>
-          <p class="project__description text-small">{{ project.description }}</p>
+          <p class="project__description text-small">{{ project.description }} <small>({{ project.timespan }})</small></p>
         </li>
       </ul>
       <p class="cell medium-9 large-8 text-center text-medium">Besides from that there is a couple of other design stuff I did in the past. Here are some visual impressions:</p>
