--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -29,48 +29,42 @@
           description: "E-commerce and online magazine for the well-known german publisher brand eins, Hamburg, long-term project",
           url: "http://www.brandeins.de",
           tags: ["design", "frontend", "cms"],
-          active: true
-        },
-        { name: "bitspire.de",
-          description: "Company website",
-          url: "http://bitspire.de/en",
-          tags: ["branding", "design", "frontend", "cms", "text"],
-          active: true
-        },
-        { name: "brandguide.zdf.de",
-          description: "Online brand guide for ZDF and its sub brands, technical implementation for the brand agency KNSK Hamburg",
-          url: "http://brandguide.zdf.de",
-          tags: ["frontend", "cms"],
+          timespan: "2015–2018",
           active: true
         },
         { name: "remax.eu",
           description: "Global real estate franchising company, technical implementation for the brand agency factor partners Hamburg.",
           url: "http://remax.eu",
           tags: ["frontend", "cms"],
+          timespan: "2017–2018",
           active: true
         },
         { name: "shop.finanzenverlag.de",
           description: "E-commerce site for the german publisher Finanzenverlag in Munich, known for the magazines „Euro“ and „Börse Online“",
           url: "https://shop.finanzenverlag.de",
           tags: ["design", "frontend", "cms"],
+          timespan: "2016–2017",
           active: true
         },
-        { name: "all-pro.hk",
-          description: "German/Asian manufacturer for lamps and electrical installation materials",
-          url: "http://www.all-pro.hk",
-          tags: ["branding", "design", "frontend", "cms"],
+        { name: "brandguide.zdf.de",
+          description: "Online brand guide for ZDF and its sub brands, technical implementation for the brand agency KNSK Hamburg",
+          url: "http://brandguide.zdf.de",
+          tags: ["frontend", "cms"],
+          timespan: "2016–2017",
           active: true
         },
         { name: "hijabvibe.com",
           description: "Fashion Website for modern muslimes",
           url: "http://www.hijabvibe.com",
           tags: ["branding", "design", "frontend", "cms"],
+          timespan: "2017",
           active: true
         },
         { name: "operator.cloud",
           description: "Product landing page for VoIP phone system for the IT agency magic support Hamburg",
           url: "http://operator.cloud",
           tags: ["design", "frontend"],
+          timespan: "2016",
           active: true
         }
       ],
