--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,13 +8,13 @@ title: Björn Richter – Interface Designer and Frontend Developer
 <section id="about" class="intro grid-container">
   <div class="grid-x grid-padding-x align-center">
     <div class="cell medium-10 large-5 text-center large-text-right">
-      <h2 class="like-h3 text-grey">Hi, I'm Björn Richter,</h2>
+      <h2 class="like-h3 text-grey">Hi, I’m Björn Richter,</h2>
       <h1 class="text-primary">Full Stack Designer and Frontend Developer based in Berlin.</h1>
     </div>
     <div class="cell medium-8 large-6">
       <p>
-        Currently I'm working at <%= link_to 'solarisBank', 'http://solarisbank.com', target: "blank", class: "external" %> in the <%= link_to 'Blockchain Factory', 'https://www.solarisbank.com/en/services/blockchain', target: 'blank', class: "external" %> team. As a designer and frontend developer I'm working on the concept, design and implementation of user interfaces for new financial services, especially in the field of crypto currencies.<br />
-        In the past I gained experience in a lot of short and long running projects for bigger and smaller clients at <%= link_to 'bitspire', 'http://bitspire.de', target: 'blank', class: "external" %>, <%= link_to 'Edenspiekermann', 'http://edenspiekermann.de', target: 'blank', class: "external" %> and several other companies. I have a Bachelor's degree in Interface Design from the <%= link_to 'University of Applied Sciences Potsdam', 'https://fh-potsdam.de', target: 'blank', class: "external" %>.<br />My full <%= link_to 'CV', '#cv', class: "scroll-link" %> can be found at the bottom at the bottom.
+        Currently I’m working at <%= link_to 'solarisBank', 'http://solarisbank.com', target: "blank", class: "external" %> in the <%= link_to 'Blockchain Factory', 'https://www.solarisbank.com/en/services/blockchain', target: 'blank', class: "external" %> team. As a designer and frontend developer I’m working on the concept, design and implementation of user interfaces for new financial services, especially in the field of crypto currencies.<br />
+        In the past I gained experience in a lot of short and long running projects for bigger and smaller clients at <%= link_to 'bitspire', 'http://bitspire.de', target: 'blank', class: "external" %>, <%= link_to 'Edenspiekermann', 'http://edenspiekermann.de', target: 'blank', class: "external" %> and several other companies. I have a Bachelor’s degree in Interface Design from the <%= link_to 'University of Applied Sciences Potsdam', 'https://fh-potsdam.de', target: 'blank', class: "external" %>.<br />My full <%= link_to 'CV', '#cv', class: "scroll-link" %> can be found at the bottom at the bottom.
       </p>
     </div>
   </div>
