--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,7 +1,7 @@
 <section id="projects" class="p-top-0">
   <div class="grid-container" v-on:click="resetFilter">
     <div class="grid-x grid-padding-x align-center">
-      <h2 class="cell medium-10 large-6 text-center">Some of the projects I've worked on during the last years</h2>
+      <h2 class="cell medium-10 large-6 text-center">Some of the projects I’ve worked on during the last years</h2>
       <ul class="projects cell medium-10 large-7">
         <li class="project" v-for="project in projects" v-bind:class="{ 'muted': !project.active }">
           <h4 class="project__title">
