Update skills, projects, cv and introduction

--- a/source/partials/_cv.html.erb
+++ b/source/partials/_cv.html.erb
@@ -6,13 +6,19 @@
           <h2>Work</h2>
           <li>
             <hr>
-            <p class="timespan"><span class="text-small text-caps">06/2018</span><span class="text-small"> – Today</span> <span class="text-xsmall text-grey dynamic-date-span" data-startdate="2018-06-01"></span></p>
-            <h5 class="text-primary">Senior Designer & Frontend Developer</h5>
-            <p class="text-small">Design and development of financial products<br /><strong><%= link_to '@ solarisBank AG, Berlin', 'http://solarisbank.com', target: 'blank', class: "text-grey external" %></strong></p>
+            <p class="timespan"><span class="text-small text-caps">01/2020</span><span class="text-small"> – Today</span> <span class="text-xsmall text-grey dynamic-date-span" data-startdate="2020-01-01"></span></p>
+            <h5 class="text-primary">Senior Designer & Frontend Engineer</h5>
+            <p class="text-small">Design and development of the Solarisbank backoffice – the internal key tool for all kind of banking operations<br /><strong><%= link_to '@ Solarisbank AG, Berlin', 'http://solarisbank.com', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
           <li>
             <hr>
-            <p class="timespan"><span class="text-small text-caps">04/2015 – 05/2018</span> <span class="text-xsmall text-grey">(3 years)</span></p>
+            <p class="timespan"><span class="text-small text-caps">06/2018 – 12/2019</span><span class="text-small"> – Today</span> <span class="text-xsmall text-grey">(1 year, 7 months)</span></p>
+            <h5 class="text-primary">Senior Designer & Frontend Engineer</h5>
+            <p class="text-small">Design and development of the frontend for the Börse Stuttgart Digital Exchange – the first German regulated crypto exchange<br /><strong><%= link_to '@ Solarisbank AG, Berlin', 'http://solarisbank.com', target: 'blank', class: "text-grey external" %></strong></p>
+          </li>
+          <li>
+            <hr>
+            <p class="timespan"><span class="text-small text-caps">04/2015 – 05/2018</span> <span class="text-xsmall text-grey">(3 years, 2 months)</span></p>
             <h5 class="text-primary">Designer & Frontend Developer</h5>
             <p class="text-small">Design and development of e-commerce products and corporate websites<br /><strong><%= link_to '@ bitspire, Berlin', 'http://bitspire.de', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
@@ -24,13 +30,13 @@
           </li>
           <li>
             <hr>
-            <p class="timespan"><span class="text-small text-caps">07/2010 – 03/2014</span> <span class="text-xsmall text-grey">(4 years)</span></p>
+            <p class="timespan"><span class="text-small text-caps">07/2010 – 03/2014</span> <span class="text-xsmall text-grey">(3 years, 9 months)</span></p>
             <h5 class="text-primary">Interface Designer (part-time)</h5>
             <p class="text-small">Interface design for medical devices, web design, communication design<br /><strong class="text-grey">@ World of Medicine GmbH, Berlin</strong></p>
           </li>
           <li>
             <hr>
-            <p class="timespan"><span class="text-small text-caps">11/2007 – 02/2010</span> <span class="text-xsmall text-grey">(3 years)</span></p>
+            <p class="timespan"><span class="text-small text-caps">11/2007 – 02/2010</span> <span class="text-xsmall text-grey">(2 years, 4 months)</span></p>
             <h5 class="text-primary">Graphic Designer + Final Artist</h5>
             <p class="text-small">Packaging design, communication design and final art for computer games<br /><strong class="text-grey">@ dtp entertainment AG, Hamburg</strong></p>
           </li>
