--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="grid-x align-middle">
   <% link_to "http://bjoern-richter.com", class: 'logo cell shrink' do %>
     <%= image_tag "bjoern-richter-logo.svg" %>
-    <p class="text-bold">Björn<span>|</span>Richter<br />Full<span>|</span>Stack<span>|</span>Designer<br />Frontend<span>|</span>Developer</p>
+    <p class="text-bold">Björn<span>|</span>Richter<br />Full<span>|</span>Stack<span>|</span>Designer<br />Frontend<span>|</span>Engineer</p>
   <% end %>
   <div class="menu-btn">
     <div class="menu-icon">
