--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -25,6 +25,13 @@
     el: "#projects",
     data: {
       projects: [
+        { name: "app.bsdex.de",
+          description: "The first German regulated Crypro Exchange, including a wallets overview, orders, transactions, a professional trading interface and some more",
+          url: "https://app.bsdex.de",
+          tags: ["design", "frontend"],
+          timespan: "2018–2019",
+          active: true
+        },
         { name: "brandeins.de",
           description: "E-commerce and online magazine for the well-known german publisher brand eins, Hamburg, long-term project",
           url: "http://www.brandeins.de",
@@ -60,13 +67,6 @@
           timespan: "2017",
           active: true
         },
-        { name: "operator.cloud",
-          description: "Product landing page for VoIP phone system for the IT agency magic support Hamburg",
-          url: "http://operator.cloud",
-          tags: ["design", "frontend"],
-          timespan: "2016",
-          active: true
-        }
       ],
       filter: "all"
     },
