--- a/source/partials/_skills.html.erb
+++ b/source/partials/_skills.html.erb
@@ -25,40 +25,38 @@
     el: "#skills",
     data: {
       skills: [
-        { category: "Design", name: "Visual Interface Design", value: "100" },
-        { category: "Design", name: "Typography and Layout", value: "95" },
-        { category: "Design", name: "Interaction Design", value: "85" },
-        { category: "Design", name: "UX Conception", value: "75" },
-        { category: "Design", name: "Design Systems", value: "50" },
+        { category: "Design", name: "UI Design", value: "100" },
+        { category: "Design", name: "UX Conception", value: "70" },
+        { category: "Design", name: "Design Systems", value: "65" },
         { category: "Design", name: "User-Testing and Research", value: "45" },
+        { category: "Design", name: "Typography", value: "80" },
         { category: "Design", name: "Corporate Design", value: "40" },
         { category: "Design", name: "Graphic Design", value: "35" },
-        { category: "DEV", name: "CSS/Sass", value: "100" },
-        { category: "DEV", name: "HTML", value: "90" },
-        { category: "DEV", name: "Agile, Scrum, Kanban", value: "75" },
-        { category: "DEV", name: "git", value: "70" },
-        { category: "DEV", name: "AlchemyCMS", value: "55" },
-        { category: "DEV", name: "JavaScript", value: "50" },
-        { category: "DEV", name: "jQuery", value: "45" },
-        { category: "DEV", name: "React", value: "40" },
-        { category: "DEV", name: "Redux", value: "20" },
-        { category: "DEV", name: "Vue", value: "8" },
-        { category: "DEV", name: "Ruby on Rails", value: "8" },
-        { category: "Personal", name: "Passion", value: "100" },
-        { category: "Personal", name: "Teamwork", value: "100" },
+        { category: "DEV", name: "HTML/CSS/Sass", value: "100" },
+        { category: "DEV", name: "JavaScript", value: "75" },
+        { category: "DEV", name: "React", value: "65" },
+        { category: "DEV", name: "Redux", value: "50" },
+        { category: "DEV", name: "TypeScript", value: "55" },
+        { category: "DEV", name: "TDD (Enzyme, Cypress)", value: "70" },
+        { category: "DEV", name: "Storybook", value: "25" },
+        { category: "DEV", name: "git", value: "65" },
+        { category: "DEV", name: "Agile, Scrum, Kanban", value: "80" },
+        // { category: "Personal", name: "Passion", value: "100" },
         { category: "Personal", name: "Analytical thinking", value: "100" },
-        { category: "Personal", name: "Structured working", value: "95" },
-        { category: "Personal", name: "Reliability", value: "90" },
-        { category: "Personal", name: "Creative problem solving", value: "85" },
+        { category: "Personal", name: "Problem Solving", value: "95" },
+        { category: "Personal", name: "Teamwork", value: "90" },
+        // { category: "Personal", name: "Structured working", value: "95" },
+        { category: "Personal", name: "Reliability", value: "95" },
+        { category: "Personal", name: "Creativity", value: "85" },
         { category: "Personal", name: "Communication", value: "80" },
-        { category: "Personal", name: "Self reflection", value: "75" },
+        // { category: "Personal", name: "Self reflection", value: "75" },
         { category: "Personal", name: "Presentation", value: "65" },
-        { category: "Industry", name: "eCommerce", value: "85" },
-        { category: "Industry", name: "Editorial", value: "75" },
-        { category: "Industry", name: "Finance", value: "60" },
-        { category: "Industry", name: "Blockchain/Crypto", value: "55" },
-        { category: "Industry", name: "Brand Development", value: "50" },
-        { category: "Industry", name: "Marketing/Advertising", value: "45" },
+        { category: "Personal", name: "Moderation", value: "45" },
+        { category: "Industry", name: "Finance/Banking", value: "85" },
+        { category: "Industry", name: "Finance/Trading", value: "65" },
+        { category: "Industry", name: "eCommerce", value: "55" },
+        { category: "Industry", name: "Editorial", value: "50" },
+        { category: "Industry", name: "Branding/Marketing/Advertising", value: "45" },
         { category: "Industry", name: "Medical Technology", value: "35" },
         { category: "Industry", name: "Computer Games", value: "15" },
       ],
