--- a/source/partials/cases/_alchemy.html.erb
+++ b/source/partials/cases/_alchemy.html.erb
@@ -76,7 +76,7 @@
         <p class="text-small"><small class="text-grey-muted">Context</small><br />2017, Open Source Contribution</p>
       </div>
       <div class="cell medium-8 large-7 text-small">
-        <p class="text-small"><small class="text-grey-muted">Project</small><br />Redesign and implementation of the user interface for the open source Rails based Alchemy CMS including new icons, a modern skin and a couple of usability improvements. See my pull request on <%= link_to "github", "https://github.com/AlchemyCMS/alchemy_cms/pull/1261", target: "blank", class: "external" %>.</p>
+        <p class="text-small"><small class="text-grey-muted">Project</small><br />Redesign and implementation of the user interface for the open source Rails based Alchemy CMS including new icons, a modern skin and a couple of usability improvements.</p>
       </div>
     </div>
   </div>
