--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Björn Richter is a berlin based UX/UI designer and frontend developer with passion for software interfaces, the web and typography.">
+    <meta name="description" content="Björn Richter is a berlin based UX/UI designer and frontend engineer with passion for software interfaces, the web and typography.">
     <meta name="author" content="Björn Richter">
     <meta name = "format-detection" content = "telephone=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Björn Richter – Digital Product Designer and Frontend Developer" %></title>
+    <title><%= current_page.data.title || "Björn Richter – Full Stack Designer and Frontend Engineer" %></title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
